# manual-chatbot

./: .gitignore  CLAUDE.md  FINDINGS.md  IMPLEMENTATION_PLAN.md  LEARNINGS.md  PROGRESS.md  README.md  RECOMMENDATIONS.md  REVIEW.md  pyproject.toml
docs/plans/: 2026-02-16-output-quality-fixes.md
output/: assess_pdfs.py  boot.py  cj-universal-53-71_chunks.jsonl  gen.py  gen_validate.py  qa_details.py  tm9-8014-m38a1_chunks.jsonl  validate_cj.py  validate_cj_b64.txt  validate_tm9.py  write_script.py  write_validate.py
profiles/: cj-universal.yaml  tm9-8014.yaml  tm9-8015-1.yaml  tm9-8015-2.yaml  xj-1999.yaml
schema/: manual_profile_v1.schema.json
src/pipeline/: __init__.py  chunk_assembly.py  cli.py  embeddings.py  ocr_cleanup.py  profile.py  qa.py  retrieval.py  structural_parser.py
tests/: conftest.py  test_chunk_assembly.py  test_cli.py  test_embeddings.py  test_integration.py  test_ocr_cleanup.py  test_profile.py  test_qa.py  test_retrieval.py  test_structural_parser.py
tests/fixtures/: cj_universal_profile.yaml  invalid_profile.yaml  tm9_8014_profile.yaml  xj_1999_profile.yaml
